...
                    <Text style={{ fontSize: 16 }}>Google</Text>
                </TouchableOpacity>
                <Divider />
                <EmailLoginButton />
                <Divider />
                <TouchableOpacity
                    testID="fakeOauthButton"
                    onPress={() => loginHandler('fake-oauth')}
                    activeOpacity={0.5}
                    style={{
                        paddingVertical: 30,
                        paddingHorizontal: 20,
                        borderRadius: 12,
...
