...
                <View style={{ paddingRight: 15 }}>
                    {me ? (
                        <TouchableOpacity onPress={signOut}>
                            <Text style={{ letterSpacing: 1, color: 'grey' }}>{signOutButtonLabel}</Text>
                        </TouchableOpacity>
                    ) : (
                        <TouchableOpacity onPress={() => navigation.navigate('Login')} testID="loginButton">
                            <Text style={{ letterSpacing: 1 }}>{signInButtonLabel}</Text>
                        </TouchableOpacity>
                    )}
                </View>
            </View>
            <View style={{ paddingHorizontal: 40, paddingBottom: 40 }}>
...
